@@ -1713,7 +1713,12 @@ class Update {
 
 		$sql = "ALTER TABLE `now_playing` ADD `object_type` VARCHAR ( 255 ) NOT NULL AFTER `object_id`"; 
 		$db_results = Dba::write($sql); 
-	
+
+		$sql = "ALTER TABLE `video` ADD `addition_time` INT( 11 ) UNSIGNED NOT NULL AFTER `mime`"; 
+		$db_results = Dba::write($sql); 
+		
+		$sql = "ALTER TABLE `video` ADD `update_time` INT( 11 ) UNSIGNED NULL AFTER `addition_time`"; 
+		$db_results = Dba::write($sql); 	
 
 		//self::set_version('db_version','350008'); 
 
