@@ -33,10 +33,10 @@ $web_path = Config::get('web_path');
 </colgroup>
 <tr class="th-top">
 	<th class="cel_add"><?php echo _('Add'); ?></th>
-	<th class="cel_title"><?php echo _('Title'); ?></th>
-	<th class="cel_codec"><?php echo _('Codec'); ?></th>
-	<th class="cel_resolution"><?php echo _('Resolution'); ?></th>
-	<th class="cel_length"><?php echo _('Length'); ?></th>
+	<th class="cel_title"><?php echo Ajax::text('?page=browse&action=set_sort&type=video&sort=title',_('Title'),'sort_video_title'); ?></th>
+	<th class="cel_codec"><?php echo Ajax::text('?page=browse&action=set_sort&type=video&sort=codec',_('Codec'),'sort_video_codec'); ?></th>
+	<th class="cel_resolution"><?php echo Ajax::text('?page=browse&action=set_sort&type=video&sort=resolution',_('Resolution'),'sort_video_rez'); ?></th>
+	<th class="cel_length"><?php echo Ajax::text('?page=browse&action=set_sort&type=video&sort=length',_('Length'),'sort_video_length'); ?></th>
 	<th class="cel_tags"><?php echo _('Tags'); ?></th>
 </tr>
 <?php 
