@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha3 
+	- Add sorting to Video Browse
+	- Changed to new Query backend for Browsing and Dynamic Playlists
 
 --------------------------------------------------------------------------
   v.3.5-Alpha2 03/08/2009
